--- a/default.css
+++ b/default.css
@@ -770,4 +770,9 @@
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
-	
+
+#baseball-fantasy-advice{
+
+padding: 30px 40px; 
+margin: 60px 80px;	
+	}
